Fix Vercel deployment configuration
- Add Node.js runtime specification to vercel.json
- Convert api/index.js to ES modules syntax
- Install @remix-run/vercel dependency
- Update vite.config.ts for proper Vercel build configuration

--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,14 @@
   "buildCommand": "npm run build",
   "outputDirectory": "build/client",
   "functions": {
-    "build/server/index.js": {
-      "runtime": "nodejs18.x"
+    "api/index.js": {
+      "runtime": "nodejs20.x"
     }
   },
   "rewrites": [
     {
       "source": "/(.*)",
-      "destination": "/build/server/index.js"
+      "destination": "/api"
     }
   ]
 }
