--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,4 @@
 {
   "buildCommand": "npm run build",
-  "outputDirectory": "build/client",
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/api"
-    }
-  ]
+  "outputDirectory": "build/client"
 }
