--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@shopify/polaris": "^12.0.0",
     "@shopify/shopify-app-remix": "^3.7.0",
     "@shopify/shopify-app-session-storage-prisma": "^6.0.0",
+    "@vercel/remix": "^2.16.7",
     "crypto-js": "^4.2.0",
     "isbot": "^5.1.0",
     "prisma": "^6.2.1",
