--- a/package.json
+++ b/package.json
@@ -25,13 +25,15 @@
   "engines": {
     "node": "^18.20 || ^20.10 || >=21.0.0"
   },
+  ".nvmrc": "20",
+  "packageManager": "npm@10.2.4",
   "dependencies": {
     "@prisma/client": "^6.2.1",
-    "@remix-run/dev": "^2.16.1",
-    "@remix-run/fs-routes": "^2.16.1",
-    "@remix-run/node": "^2.16.1",
-    "@remix-run/react": "^2.16.1",
-    "@remix-run/serve": "^2.16.1",
+    "@remix-run/dev": "2.16.7",
+    "@remix-run/fs-routes": "2.16.7",
+    "@remix-run/node": "2.16.7",
+    "@remix-run/react": "2.16.7",
+    "@remix-run/serve": "2.16.7",
     "@shopify/app-bridge-react": "^4.1.6",
     "@shopify/polaris": "^12.0.0",
     "@shopify/shopify-app-remix": "^3.7.0",
@@ -47,8 +49,8 @@
     "zod": "^4.0.5"
   },
   "devDependencies": {
-    "@remix-run/eslint-config": "^2.16.1",
-    "@remix-run/route-config": "^2.16.1",
+    "@remix-run/eslint-config": "2.16.7",
+    "@remix-run/route-config": "2.16.7",
     "@shopify/api-codegen-preset": "^1.1.1",
     "@types/crypto-js": "^4.2.2",
     "@types/eslint": "^9.6.1",
