--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -3,7 +3,7 @@
 client_id = "a5784bc519d756a0638a4a42ab287021"
 name = "usapayments-bank"
 handle = "usapayments-bank"
-application_url = "https://scenic-delivering-showers-blake.trycloudflare.com"
+application_url = "https://fingrid-shopify-payment-gateway.vercel.app"
 embedded = true
 
 [build]
@@ -37,7 +37,7 @@ api_version = "2025-07"
 scopes = "read_orders,write_orders,read_customers,write_customers,read_checkouts,write_checkouts,read_payment_gateways,write_payment_gateways,read_products,write_script_tags"
 
 [auth]
-redirect_urls = ["https://scenic-delivering-showers-blake.trycloudflare.com/auth/callback", "https://scenic-delivering-showers-blake.trycloudflare.com/auth/shopify/callback", "https://scenic-delivering-showers-blake.trycloudflare.com/api/auth/callback"]
+redirect_urls = ["https://fingrid-shopify-payment-gateway.vercel.app/auth/callback", "https://fingrid-shopify-payment-gateway.vercel.app/auth/shopify/callback", "https://fingrid-shopify-payment-gateway.vercel.app/api/auth/callback"]
 
 [pos]
 embedded = false
