--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "rate-limiter-flexible": "^7.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-reconciler": "^0.32.0",
     "vite-tsconfig-paths": "^5.0.1",
     "zod": "^4.0.5"
   },
