Fix shopify plus

--- a/extensions/fingrid-payment-method/shopify.extension.toml
+++ b/extensions/fingrid-payment-method/shopify.extension.toml
@@ -1,31 +1,10 @@
-name = "Fingrid Payment Method"
-type = "checkout_ui"
+api_version = "2024-07"
 
-[build]
-command = "shopify app build"
-path = "dist"
+[[extensions]]
+type = "ui_extension"
+name = "fingrid-payment-method"
+handle = "fingrid-payment-method"
 
-[[targeting]]
+[[extensions.targeting]]
 target = "purchase.checkout.payment-method-list.render-after"
-
-[settings]
-  [[settings.fields]]
-  key = "discount_percentage"
-  type = "number_decimal"
-  name = "Discount Percentage"
-  
-  [[settings.fields]]
-  key = "theme_color"
-  type = "color"
-  name = "Theme Color"
-  
-  [[settings.fields]]
-  key = "show_saved_banks"
-  type = "boolean"
-  name = "Show Saved Bank Accounts"
-
-  [[settings.fields]]
-  key = "test_mode"
-  type = "boolean"
-  name = "Test Mode"
-  description = "Enable test mode for sandbox environment"
+module = "./src/index.jsx"
